chill will revert

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "coverage/*"
     ],
     "angularCompilerOptions": {
-        "skipTemplateCodegen": true
+        "skipTemplateCodegen": true,
+        "disableTypeScriptVersionCheck": true
     }
 }
