--- a/package.json
+++ b/package.json
@@ -6,20 +6,17 @@
     "type": "git",
     "url": "https://github.com/videogular/videogular2"
   },
-  "peerDependencies": {
-    "@angular/core": "^8.0.0",
-    "rxjs": "^6.3.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cli": "8.0.1",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/platform-server": "^8.0.0",
+    "@angular/animations": "^9.1.3",
+    "@angular/cli": "9.1.3",
+    "@angular/common": "^9.1.3",
+    "@angular/compiler": "^9.1.3",
+    "@angular/compiler-cli": "^9.1.3",
+    "@angular/core": "^9.1.3",
+    "@angular/platform-browser": "^9.1.3",
+    "@angular/platform-browser-dynamic": "^9.1.3",
+    "@angular/platform-server": "^9.1.3",
     "@types/bluebird": "^3.5.25",
     "@types/core-js": "0.9.46",
     "@types/jasmine": "^3.3.1",
@@ -42,14 +39,15 @@
     "reflect-metadata": "^0.1.10",
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
-    "rxjs": "6.5.2",
+    "rxjs": "6.5.5",
     "semantic-release": "6.3.2",
     "systemjs": "^0.20.19",
     "tslint": "5.17.0",
-    "typescript": "~3.4.5",
+    "typescript": "~3.8.3",
     "validate-commit-msg": "2.12.1",
     "watch": "1.0.2",
-    "zone.js": "0.9.1"
+    "zone.js": "0.10.3",
+    "tslib": "^1.10.0"
   },
   "scripts": {
     "prebuild": "npm run clean",
@@ -71,8 +69,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
-      "commit-msg": "validate-commit-msg"
+
     }
   },
   "engines": {
