--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.900.1",
+    "@angular-devkit/build-ng-packagr": "0.900.1",
     "@angular/animations": "^9.1.3",
     "@angular/cli": "9.1.3",
     "@angular/common": "^9.1.3",
     "@angular/compiler": "^9.1.3",
     "@angular/compiler-cli": "^9.1.3",
     "@angular/core": "^9.1.3",
+    "@angular/language-service": "^9.1.3",
     "@angular/platform-browser": "^9.1.3",
     "@angular/platform-browser-dynamic": "^9.1.3",
     "@angular/platform-server": "^9.1.3",
+    "@angular/cdk": "^9.0.0",
+    "@angular/forms": "^9.1.3",
     "@types/bluebird": "^3.5.25",
     "@types/core-js": "0.9.46",
     "@types/jasmine": "^3.3.1",
@@ -44,6 +49,14 @@
     "rxjs": "6.5.5",
     "semantic-release": "6.3.2",
     "systemjs": "^0.20.19",
+    "@types/jasminewd2": "~2.0.3",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.4.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.37.0",
     "tslib": "^1.10.0",
     "tslint": "5.17.0",
     "typescript": "~3.8.3",
@@ -53,21 +66,23 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "ngc",
     "postbuild": "npm test",
     "build:travis": "ngc",
     "postbuild:travis": "npm run test",
     "clean": "rimraf -rf ./src/**/*.js && rimraf -rf ./src/**/*.d.ts && rimraf -rf ./compiled",
     "commit": "git-cz",
     "coverage": "http-server -c-1 -o -s -p 9875 ./coverage",
-    "start": "run-p \"watch:ts\" \"start:coverage-server\"",
     "start:coverage-server": "http-server -c-1 -o -p 9875 ./coverage",
     "test": "karma start karma.conf.js",
     "posttest": "remap-istanbul -i ./coverage/coverage-final.json -o coverage -t html",
     "report-coverage": "cat ./coverage/coverage-final.json | ./node_modules/.bin/remap-istanbul -o coverage-remapped.json",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "watch:ts": "watch \"npm run build\" src",
-    "lint": "tslint -p tsconfig.json -c tslint.json --fix"
+    "lint": "tslint -p tsconfig.json -c tslint.json --fix",
+    "ng": "ng",
+    "start": "ng serve videogular2",
+    "build": "ng build && cp -r ./fonts ./dist/videogular2",
+    "e2e": "ng e2e"
   },
   "husky": {
     "hooks": {}
