--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,35 @@
 {
+    "compileOnSave": false,
     "compilerOptions": {
-        "lib": ["es5", "es2015", "dom", "scripthost"],
-        "noImplicitAny": false,
-        "module": "commonjs",
-        "target": "es5",
-        "outDir": "compiled",
-        "emitDecoratorMetadata": true,
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "downlevelIteration": true,
         "experimentalDecorators": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "inlineSourceMap": true,
-        "inlineSources": true,
-        "declaration": true,
+        "module": "esnext",
         "moduleResolution": "node",
-        "skipLibCheck": true,
-        "types": [
-            "node"
+        "importHelpers": true,
+        "target": "es2015",
+        "typeRoots": [
+            "node_modules/@types"
         ],
+        "lib": [
+            "es2018",
+            "dom"
+        ],
+        "paths": {
+            "videogular2": [
+                "dist/videogular2"
+            ],
+            "videogular2/*": [
+                "dist/videogular2/*"
+            ]
+        }
     },
-    "exclude": [
-        "docs/*",
-        "node_modules/*",
-        "coverage/*"
-    ],
     "angularCompilerOptions": {
-        "genDir": "aot",
-        "debug": true,
-        "skipTemplateCodegen": true,
-        "strictMetadataEmit": true,
-        "enableIvy": false,
-        "disableTypeScriptVersionCheck": true
+        "fullTemplateTypeCheck": false,
+        "strictInjectionParameters": true,
+        "allowEmptyCodegenFiles": true
     }
 }
